changing contact spelling

--- a/contact us.html
+++ b/contact us.html
@@ -7,7 +7,7 @@
     <title>Contact Us</title>
 </head>
 <body>
-    <h3>So you can conntact us via</h3>
+    <h3>So you can contact us via</h3>
     <p>Email:xyz@gmail.com</p>
     <p>Phone:548205920</p>
 
